tdf#161653 Fix selecting from numbering dropdown

Change-Id: I5ba2133395619ec96b32940a6ceddf0c32615a03
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169253
Tested-by: Thorsten Behrens <thorsten.behrens@allotropia.de>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>